--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="scene.css" />
     <link rel="stylesheet" href="buttons.css" />
+    <link rel="stylesheet" href="animation.css" />
     <script src="interaction.js" defer></script>
   </head>
   <body>
@@ -16,7 +17,7 @@
     <main>
       <section class="buttons">
         <button id="b1">E</button>
-        <button>P</button>
+        <button id="b2">P</button>
         <button>B</button>
       </section>
       <section class="scene_container">
