--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <section class="buttons">
         <button id="b1">E</button>
         <button id="b2">P</button>
-        <button>B</button>
+        <button id="b3">B</button>
       </section>
       <section class="scene_container">
         <div class="scene_wrapper">
           <img id="img_1" src="./img/s1.png" alt="scene" />
           <img id="img_2" src="./img/p1.png" alt="character" />
-          <img id="bee" src="./img/bee.png" alt="bee" />
+          <img id="bee" class="" src="./img/bee.png" alt="bee" />
         </div>
       </section>
     </main>
